<resources>
    <string name="app_name">Mosvodokanal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- AUTH -->


    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="send_the_code">Получить код</string>
    <string name="go_on">Продолжить</string>
    <string name="save">Сохранить</string>

    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="subscriber_number">Номер абонента</string>
    <string name="the_amount_of_the_last_payment">Сумма последнего платежа</string>

    <string name="err_wrong_password">Неверный пароль</string>

    <string name="forgot_password">Забыли пароль?</string>
    <string name="no_account">У вас нет аккаунта?&#160;</string>
    <string name="go_to_register">Зарегистрируйтесь</string>

    <string name="i_dont_remember_password">Не помню пароль</string>
    <string name="i_dont_remember_password_message">Вы можете получить одноразовый код для входа на email, который вы указывали при регистрации.</string>

    <string name="enter_the_code">Введите код</string>
    <string name="enter_the_code_message">Вы получили одноразовый код, для сброса пароля на почту %s</string>

    <string name="new_password">Новый пароль</string>
    <string name="new_password_message">Придумайте пароль состоящий не менее 8 символов.</string>


    <string name="registration">Регистрация</string>
    <string name="where_can_I_find_out_the_subscriber_number">Где узнать номер абонента?</string>
    <string name="more_detailed">Подробнее</string>

    <string name="the_subscriber_number_location_on_the_receipt">Расположение номера абонента на квитанции</string>
    <string name="notice">Извещение</string>
    <string name="cashier">Кассир</string>
    <string name="subscriber_number_">Абонент № 00000000</string>

    <string name="confirmation_and_agreements">Я подтверждаю, что это мой номер абонента. Принимаю условия Соглашения и даю Согласие на обработку персональных данных.</string>
    <string name="email_with_password_message">На указанный адрес электронной почты, мы отправим письмо, в котором будет пароль для входа в личный кабинет.</string>

    <string name="number_example">73849284</string>
    <string name="address_example">1073547, Москва, Поселение Сосенское, дер. Николо-Хованское, Петра Вяземского ул., д. 2, коп. 3, кв. 63</string>


    <!-- MAIN SCREEN -->


    <string name="main">Главная</string>
    <string name="general_account">Общий счёт</string>
    <string name="general_account_value">%.2f ₽</string>

    <plurals name="addresses_count">
        <item quantity="zero">%x адресов</item>
        <item quantity="one">%x адрес</item>
        <item quantity="few">%x адреса</item>
        <item quantity="other">%x адреса</item>
    </plurals>

    <string name="home">Дом</string>
    <string name="parents">Родители</string>
    <string name="pay">Оплатить</string>

    <string name="voice_helper">Воспользуйтесь голосовым помощником для передачи показаний.</string>

    <string name="submit_readings">Передать показания</string>
    <string name="add_a_subscriber_number">Добавить номер абонента</string>

    <string name="home_address_example">Петра Вяземского ул., д. 2, коп. 3, кв. 63</string>
    <string name="for_the_month_example">за ноябрь</string>
    <string name="turning_off_the_hot_water_example">Отключение горячей воды\n03.12.22 10:00 – 03.12.22 18:00</string>
    <string name="second_address_example">г. Москва, ул.Ефремова, д.9, кв.25</string>


    <!-- NEWS -->


    <string name="news">Новость</string>

    <string name="date_example">21 ноября 2022</string>
    <string name="news_example">18 ноября в Музее воды АО «Мосводоканал» прошла лекция «Современная система законодательных требований в сфере промышленной экологии как основа устойчивого функционирования регионов: основные тенденции и архитектура будущего». Организаторами мероприятия, в ходе которого были подняты самые острые вопросы современного экологического законодательства, стали Ассоциация организаций содействия развитию просвещения в сфере жилищно-коммунального хозяйства «Школа грамотного потребителя» и крупнейшая водная компания России АО «Мосводоканал». Докладчиком выступил главный специалист Управления по информационной политике и внешним связям АО «Мосводоканал», член экспертного совета при Комитете по аграрно-продовольственной политике и природопользованию Совета Федерации Алексей Белов. В ходе лекции студенты Московского финансово-юридического университета (МФЮА) смогли не только погрузиться в экологические аспекты водоснабжения регионов России, но и познакомиться с перспективными направлениями развития отрасли, а также с эволюцией ее нормативно-правовой базы. Для Мосводоканала прошедшее мероприятие – один из принятых форматов. Компания является крупнейшим водным предприятием страны и уделяет большое внимание экологическому просвещению. Если говорить непосредственно о работе со студентами, то Мосводоканал заинтересован в развитии отрасли, подготовке специалистов новой формации, разработке и внедрении инновационных технологий. Долгие годы компания активно взаимодействует с профильными вузами и участвует в формировании образовательных программ.</string>


    <!-- READINGS -->

    <string name="readings">Показания</string>

</resources>